Issue 6005: Unprefix all usages of transform, linear-gradient, calc
http://code.google.com/p/fbug/issues/detail?id=6005

--- a/extension/content/firebug/html/highlighter.css
+++ b/extension/content/firebug/html/highlighter.css
@@ -14,8 +14,8 @@
     min-height: 0 !important;
     max-height: none !important;
     position: fixed !important;
-    -moz-transform: rotate(0deg) !important;
-    -moz-transform-origin: 50% 50% !important;
+    transform: rotate(0deg) !important;
+    transform-origin: 50% 50% !important;
     border-radius: 0 !important;
     box-shadow: none !important;
     background: transparent none !important;
