--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -218,10 +218,10 @@
 .infoTipColorBox {
     background-color: #C8C8C8;
     background-image:
-        -moz-linear-gradient(45deg, #A0A0A0 25%, transparent 25%),
-        -moz-linear-gradient(-45deg, #A0A0A0 25%, transparent 25%),
-        -moz-linear-gradient(45deg, transparent 75%, #A0A0A0 75%),
-        -moz-linear-gradient(-45deg, transparent 75%, #A0A0A0 75%);
+        linear-gradient(45deg, #A0A0A0 25%, transparent 25%),
+        linear-gradient(135deg, #A0A0A0 25%, transparent 25%),
+        linear-gradient(45deg, transparent 75%, #A0A0A0 75%),
+        linear-gradient(135deg, transparent 75%, #A0A0A0 75%);
     background-size: 16px 16px;
     background-position:0 0, 8px 0, 8px -8px, 0px 8px;
 }
