--- a/extension/content/firebug/firefox/browserOverlay.css
+++ b/extension/content/firebug/firefox/browserOverlay.css
@@ -44,8 +44,8 @@
     border-radius: 3px;
     background-color: rgba(255, 0, 0, 0.9);
     box-shadow: inset 0px 0px 1px white;
-    background-image: -moz-linear-gradient(
-        center bottom,
+    background-image: linear-gradient(
+        to top,
         #DBE1EB 0%,
         #DEE4EB 80%,
         #E7EBF3 81%
@@ -125,7 +125,7 @@
 }
 
 #fbContentSplitter[dir=reverse]{
-    -moz-transform: scale(-1, -1);
+    transform: scale(-1, -1);
 }
 
 #fbContentSplitter[orient=vertical] {
