--- a/extension/skin/classic/debugger.css
+++ b/extension/skin/classic/debugger.css
@@ -136,7 +136,7 @@
     margin-top: 0;
     left: 5px;
     width: 90%;
-    background: -moz-linear-gradient(top, #00CEFD, #00BAF6) no-repeat;
+    background: linear-gradient(to bottom, #00CEFD, #00BAF6) no-repeat;
     border-style: solid;
     border-width: 19px 25px 33px 33px;
     -moz-border-image: url(condCorners.png) 19 25 33 33 stretch;
@@ -164,7 +164,7 @@
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 .upsideDown {
-    background: -moz-linear-gradient(top, #00D1FE, #00ADE6) no-repeat;
+    background: linear-gradient(to bottom, #00D1FE, #00ADE6) no-repeat;
     border-style: solid;
     border-width: 28px 25px 19px 33px;
     -moz-border-image: url(condCornersUps.png) 28 25 19 33 stretch;
