--- a/extension/skin/classic/performanceTiming.css
+++ b/extension/skin/classic/performanceTiming.css
@@ -17,7 +17,7 @@
     position: absolute;
     top: 1px;
     bottom: 1px;
-    background-image: -moz-linear-gradient(center top , rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.2));
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.2));
     min-width: 2px;
     z-index: 10;
 }
@@ -38,7 +38,7 @@
 /* Info Tip */
 
 .timeInfoTipRow .timeInfoTipBar {
-    background-image: -moz-linear-gradient(center top , rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.2));
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.2));
 }
 
 /*************************************************************************************************/
