Fixed positioning of source link of cookie event log

--- a/extension/skin/classic/cookies/cookies.css
+++ b/extension/skin/classic/cookies/cookies.css
@@ -21,10 +21,9 @@
 .logRow-cookiesCleared,
 .logRow-cookiesRejected,
 .logRow-cookie:hover {
-    padding: 2px 0px 1px 22px !important;
-    background-image: url(chrome://firebug/skin/cookies/cookie.svg) !important;
-    background-repeat: no-repeat !important;
-    background-position: 4px 2px !important;
+    background-image: url(chrome://firebug/skin/cookies/cookie.svg);
+    background-repeat: no-repeat;
+    background-position: 4px 3px;
 }
 
 .logRow-cookiesRejected .cookieRejectedList {
@@ -60,6 +59,10 @@
 
 .logRow-cookiesCleared > DIV {
     padding: 1px 0 2px 0 !important;
+}
+
+.logRow-cookie > div > .logContent {
+    padding-left: 22px;
 }
 
 /* Container for document.cookie log within the Console panel */
