Issue 5873: Base of the closure inspector

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -166,6 +166,10 @@
     color: #787878;
 }
 
+.objectBox-optimizedAway {
+    color: #909090;
+}
+
 .objectLink-sourceLink {
     position: absolute;
     right: 4px;
