--- a/trace/FBTrace/chrome/skin/classic/traceConsole.css
+++ b/trace/FBTrace/chrome/skin/classic/traceConsole.css
@@ -356,6 +356,10 @@
     color: rgb(198, 78, 0);
 }
 
+.DBG_SCRIPTPANEL {
+    color: rgb(135, 0, 21);
+}
+
 /************************************************************************************************/
 
 #consoleToolbar toolbarbutton {
