Simplify trace listener registration + tracing + new trace option for debuggerClientModule module

--- a/trace/FBTrace/chrome/skin/classic/traceConsole.css
+++ b/trace/FBTrace/chrome/skin/classic/traceConsole.css
@@ -360,6 +360,10 @@
     color: rgb(135, 0, 21);
 }
 
+.DBG_DEBUGGERCLIENTMODULE {
+    color: rgb(132, 0, 209);
+}
+
 /************************************************************************************************/
 
 #consoleToolbar toolbarbutton {
