Fixed styling of cookie events

--- a/extension/skin/classic/cookies/cookies.css
+++ b/extension/skin/classic/cookies/cookies.css
@@ -11,6 +11,11 @@
 /************************************************************************************************/
 /* Support for console */
 
+.cookieEvent {
+	position: relative;
+	width: 100%;
+}
+
 .cookieEvent .cookieDomainLabel {
     font-family: Lucida Grande, sans-serif;
     font-weight: bold;
@@ -290,6 +295,9 @@
 }
 
 .cookieDomainLabel {
+	position: absolute;
+	top: 0;
+	right: 0;
     color: rgb(0, 0, 255);
 }
 
