Additional change for issue 6273 (Filter for fonts in Net panel) and issue 6025 (Flash in the Net panel should cover all browser plugins)

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -12,8 +12,9 @@
 .hideCategory-js .category-js,
 .hideCategory-image .category-image,
 .hideCategory-xhr .category-xhr,
-.hideCategory-flash .category-flash,
+.hideCategory-plugin .category-plugin,
 .hideCategory-media .category-media,
+.hideCategory-font .category-font,
 .hideCategory-txt .category-txt,
 .hideCategory-bin .category-bin {
     display: none!important;
