Adjusted spy log source link position

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -739,6 +739,10 @@
     border-bottom: none;
 }
 
+.logRow-spy .objectLink-sourceLink {
+    top: 4px;
+}
+
 .spyTitle {
     color: #000000;
     font-weight: bold;
