Replaced sorting arrows by SVG equivalents

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -381,11 +381,11 @@
 
 .headerSorted > .headerCellBox {
     border-right-color: #6B7C93;
-    background: url(chrome://firebug/skin/arrowDown.png) no-repeat right;
+    background: url(chrome://firebug/skin/arrowDown.svg) no-repeat calc(100% - 4px);
 }
 
 .headerSorted.sortedAscending > .headerCellBox {
-    background-image: url(chrome://firebug/skin/arrowUp.png);
+    background-image: url(chrome://firebug/skin/arrowUp.svg);
 }
 
 .headerSorted:hover:active {
