--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -19,22 +19,6 @@
 /* end overrides */
 
 /*************************************************************************************************/
-/* Firebug Menu & Firefox context menu */
-
-#menu_firebug, #appmenu_firebug, #menu_webDeveloper_firebug {
-    list-style-image: url(chrome://firebug/skin/firebug16.png);
-}
-
-#menu_firebug_firebugInspect {
-    list-style-image: url(chrome://firebug/skin/inspect.png);
-    -moz-image-region: rect(0, 16px, 16px, 0);
-}
-
-#menu_firebug_firebugInspect:hover,
-#menu_firebug_firebugInspect:active {
-    -moz-image-region: rect(16px, 16px, 32px, 0);
-}
-/*************************************************************************************************/
 
 #fbInspectButton {
     margin-bottom: 1px;
@@ -273,13 +257,15 @@ textbox[type="fbSearchBox"] > panel {
 /* Firebug toolbar buttons */
 
 #fbInspectButton {
-    list-style-image: url("chrome://firebug/skin/inspect.png");
-    -moz-image-region: rect(0, 16px, 16px, 0);
+    list-style-image: url(chrome://firebug/skin/inspect.svg);
 }
 
-#fbInspectButton:hover,
+#fbInspectButton:hover {
+    filter: url(chrome://firebug/skin/filters.svg#darken);
+}
+
 #fbInspectButton:active {
-    -moz-image-region: rect(16px, 16px, 32px, 0);
+    filter: url(chrome://firebug/skin/filters.svg#deepDarken);
 }
 
 #fbBreakOnNextButtonOld {
