Issue 3129 (Remove breakpointDisabledExe.png and breakpointExe.png in favor of stacked images) http://code.google.com/p/fbug/issues/detail?id=3129

--- a/extension/skin/classic/mac/debugger.css
+++ b/extension/skin/classic/mac/debugger.css
@@ -115,7 +115,7 @@
 }
 
 .sourceRow[breakpoint="true"][exe_line="true"] > .sourceLine {
-    background-image: url(chrome://firebug/skin/breakpointExe.png);
+    background-image: url(chrome://firebug/skin/exe.png), url(chrome://firebug/skin/breakpoint.png);
 }
 
 .sourceRow[breakpoint="true"][exe_line="true"][disabledBreakpoint="true"] > .sourceLine {
