--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -77,6 +77,7 @@
 }
 
 .netRowHeader {
+    position: relative;
     display: none;
     height: 15px;
     margin-right: 0 !important;
@@ -88,7 +89,9 @@
 
 /* Display breakpoint disc */
 .netRow .netRowHeader {
-    background-position: 5px 1px;
+    width: 3px;
+    height: 100%;
+    background-position: 5px 2px;
 }
 
 .netRow[breakpoint="true"] .netRowHeader {
@@ -96,7 +99,18 @@
 }
 
 .netRow[breakpoint="true"][disabledBreakpoint="true"] .netRowHeader {
-    background-image: url(chrome://firebug/skin/breakpointDisabled.png);
+    background-image: none;
+}
+
+.netRow[breakpoint="true"][disabledBreakpoint="true"] .netRowHeader::before {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 5px;
+    width: 13px;
+    height: 14px;
+    background: url(chrome://firebug/skin/breakpoint.png) no-repeat;
+    opacity: 0.5;
 }
 
 .netRow.category-xhr:hover .netRowHeader {
@@ -110,10 +124,6 @@
 
 #netHrefCol > .netHeaderCellBox {
     border-left: 0px;
-}
-
-.netRow .netRowHeader {
-    width: 3px;
 }
 
 .netInfoRow .netRowHeader {
