--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -254,10 +254,10 @@
     cursor: pointer;
     display: none;
     margin: 0 6px 0 0;
-    width: 13px;
-    height: 14px;
-    vertical-align: bottom;
-    background: url(chrome://firebug/skin/breakpoint.png) no-repeat;
+    width: 12px;
+    height: 12px;
+    vertical-align: baseline;
+    background: url(chrome://firebug/skin/breakpoint.svg) no-repeat;
     opacity: 0.1;
 }
 
