--- a/extension/skin/classic/cookies/cookies.css
+++ b/extension/skin/classic/cookies/cookies.css
@@ -189,11 +189,11 @@
 
 /* Display breakpoint disc */
 .cookieRow .cookieRowHeader {
-    background-position: 5px 2px;
+    background-position: 5px 3px;
 }
 
 .cookieRow[breakpoint="true"] .cookieRowHeader {
-    background-image: url(chrome://firebug/skin/breakpoint.png);
+    background-image: url(chrome://firebug/skin/breakpoint.svg);
 }
 
 .cookieRow[breakpoint="true"][disabledBreakpoint="true"] .cookieRowHeader {
@@ -203,11 +203,11 @@
 .cookieRow[breakpoint="true"][disabledBreakpoint="true"] .cookieRowHeader::before {
     content: "";
     position: absolute;
-    top: 2px;
+    top: 3px;
     left: 5px;
-    width: 13px;
-    height: 14px;
-    background: url(chrome://firebug/skin/breakpoint.png) no-repeat;
+    width: 12px;
+    height: 12px;
+    background: url(chrome://firebug/skin/breakpoint.svg) no-repeat;
     opacity: 0.5;
 }
 
