--- a/extension/skin/classic/debugger.css
+++ b/extension/skin/classic/debugger.css
@@ -40,11 +40,12 @@
 /************************************************************************************************/
 
 .sourceLine {
+    position: relative;
     -moz-user-select: none;
     margin-right: 10px;
     border-right: 1px solid #CCCCCC;
     padding: 0px 4px 0 20px;
-    background: #EEEEEE no-repeat 2px 0px;
+    background: #EEEEEE no-repeat 5px 1px;
     color: #888888;
     white-space: pre;
     font-family: monospace; /* see issue 2953 */
@@ -104,7 +105,7 @@
 }
 
 .sourceRow[breakpoint="true"] > .sourceLine {
-    background-image: url(chrome://firebug/skin/breakpoint.png);
+    background-image: url(chrome://firebug/skin/breakpoint.svg);
 }
 
 .sourceRow[breakpoint="true"][condition="true"] > .sourceLine {
@@ -118,15 +119,17 @@
 .sourceRow[breakpoint="true"][disabledBreakpoint="true"] > .sourceLine::before {
     content: "";
     position: absolute;
-    left: 2px;
-    width: 13px;
-    height: 14px;
-    background: url(chrome://firebug/skin/breakpoint.png) no-repeat;
+    top: 1px;
+    left: 5px;
+    width: 12px;
+    height: 12px;
+    background: url(chrome://firebug/skin/breakpoint.svg) no-repeat;
     opacity: 0.5;
 }
 
 .sourceRow[breakpoint="true"][exe_line="true"] > .sourceLine {
-    background-image: url(chrome://firebug/skin/exe.png), url(chrome://firebug/skin/breakpoint.png);
+    background-image: url(chrome://firebug/skin/exe.png), url(chrome://firebug/skin/breakpoint.svg);
+    background-position: 4px 0px, 5px 1px;
 }
 
 .sourceRow[breakpoint="true"][exe_line="true"][disabledBreakpoint="true"] > .sourceLine {
@@ -136,24 +139,25 @@
 .sourceRow[breakpoint="true"][exe_line="true"][disabledBreakpoint="true"] > .sourceLine::before {
     content: "";
     position: absolute;
-    left: 2px;
-    width: 13px;
-    height: 14px;
-    background: url(chrome://firebug/skin/breakpoint.png) no-repeat;
+    top: 1px;
+    left: 5px;
+    width: 12px;
+    height: 12px;
+    background: url(chrome://firebug/skin/breakpoint.svg) no-repeat;
     opacity: 0.5;
 }
 
 .sourceRow[breakpoint="true"][exe_line="true"][disabledBreakpoint="true"] > .sourceLine::after {
     content: "";
     position: absolute;
-    left: 2px;
+    left: 4px;
     width: 13px;
     height: 14px;
     background: url(chrome://firebug/skin/exe.png) no-repeat;
 }
 
 .sourceLine.editing {
-    background-image: url(chrome://firebug/skin/breakpoint.png);
+    background-image: url(chrome://firebug/skin/breakpoint.svg);
 }
 
 /************************************************************************************************/
