--- a/extension/skin/classic/mac/debugger.css
+++ b/extension/skin/classic/mac/debugger.css
@@ -42,12 +42,13 @@
 /************************************************************************************************/
 
 .sourceLine {
+    position: relative;
     -moz-user-select: none;
     margin-right: 10px;
     border-bottom: 1px solid #EEEEEE;
     border-right: 1px solid #CCCCCC;
     padding: 0px 4px 0 20px;
-    background: #EEEEEE no-repeat 2px 0px;
+    background: #EEEEEE no-repeat 5px 1px;
     color: #A0A0A0;
     white-space: pre;
     font-family: monospace; /* see issue 2953 */
@@ -103,42 +104,59 @@
 }
 
 .sourceRow[breakpoint="true"] > .sourceLine {
-    background-image: url(chrome://firebug/skin/breakpoint.png);
+    background-image: url(chrome://firebug/skin/breakpoint.svg);
 }
 
 .sourceRow[breakpoint="true"][condition="true"] > .sourceLine {
     background-image: url(chrome://firebug/skin/breakpointCondition.png);
 }
 
-.sourceRow[breakpoint="true"][exe_line="true"] > .sourceLine {
-    background-image: url(chrome://firebug/skin/exe.png), url(chrome://firebug/skin/breakpoint.png);
-}
-
-.sourceRow[breakpoint="true"][exe_line="true"][disabledBreakpoint="true"] > .sourceLine {
+.sourceRow[breakpoint="true"][disabledBreakpoint="true"] > .sourceLine {
     background-image: none;
 }
 
 .sourceRow[breakpoint="true"][disabledBreakpoint="true"] > .sourceLine::before {
     content: "";
     position: absolute;
-    left: 2px;
-    width: 13px;
-    height: 14px;
-    background: url(chrome://firebug/skin/breakpoint.png) no-repeat;
+    top: 1px;
+    left: 5px;
+    width: 12px;
+    height: 12px;
+    background: url(chrome://firebug/skin/breakpoint.svg) no-repeat;
+    opacity: 0.5;
+}
+
+.sourceRow[breakpoint="true"][exe_line="true"] > .sourceLine {
+    background-image: url(chrome://firebug/skin/exe.png), url(chrome://firebug/skin/breakpoint.svg);
+    background-position: 4px 0px, 5px 1px;
+}
+
+.sourceRow[breakpoint="true"][exe_line="true"][disabledBreakpoint="true"] > .sourceLine {
+    background-image: none;
+}
+
+.sourceRow[breakpoint="true"][exe_line="true"][disabledBreakpoint="true"] > .sourceLine::before {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 5px;
+    width: 12px;
+    height: 12px;
+    background: url(chrome://firebug/skin/breakpoint.svg) no-repeat;
     opacity: 0.5;
 }
 
 .sourceRow[breakpoint="true"][exe_line="true"][disabledBreakpoint="true"] > .sourceLine::after {
     content: "";
     position: absolute;
-    left: 2px;
+    left: 4px;
     width: 13px;
     height: 14px;
     background: url(chrome://firebug/skin/exe.png) no-repeat;
 }
 
 .sourceLine.editing {
-    background-image: url(chrome://firebug/skin/breakpoint.png);
+    background-image: url(chrome://firebug/skin/breakpoint.svg);
 }
 
 /************************************************************************************************/
