--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -91,11 +91,11 @@
 .netRow .netRowHeader {
     width: 3px;
     height: 100%;
-    background-position: 5px 2px;
+    background-position: 5px 4px;
 }
 
 .netRow[breakpoint="true"] .netRowHeader {
-    background-image: url(chrome://firebug/skin/breakpoint.png);
+    background-image: url(chrome://firebug/skin/breakpoint.svg);
 }
 
 .netRow[breakpoint="true"][disabledBreakpoint="true"] .netRowHeader {
@@ -105,11 +105,11 @@
 .netRow[breakpoint="true"][disabledBreakpoint="true"] .netRowHeader::before {
     content: "";
     position: absolute;
-    top: 2px;
+    top: 4px;
     left: 5px;
-    width: 13px;
-    height: 14px;
-    background: url(chrome://firebug/skin/breakpoint.png) no-repeat;
+    width: 12px;
+    height: 12px;
+    background: url(chrome://firebug/skin/breakpoint.svg) no-repeat;
     opacity: 0.5;
 }
 
