--- a/extension/skin/classic/debugger.css
+++ b/extension/skin/classic/debugger.css
@@ -100,7 +100,8 @@
 }
 
 .sourceRow[exe_line="true"] > .sourceLine {
-    background-image: url(chrome://firebug/skin/exe.png);
+    background-image: url(chrome://firebug/skin/executionPointer.svg);
+    background-position: 7px 1px;
     color: #000000;
 }
 
@@ -128,8 +129,8 @@
 }
 
 .sourceRow[breakpoint="true"][exe_line="true"] > .sourceLine {
-    background-image: url(chrome://firebug/skin/exe.png), url(chrome://firebug/skin/breakpoint.svg);
-    background-position: 4px 0px, 5px 1px;
+    background-image: url(chrome://firebug/skin/executionPointer.svg), url(chrome://firebug/skin/breakpoint.svg);
+    background-position: 7px 1px, 5px 1px;
 }
 
 .sourceRow[breakpoint="true"][exe_line="true"][disabledBreakpoint="true"] > .sourceLine {
@@ -150,10 +151,11 @@
 .sourceRow[breakpoint="true"][exe_line="true"][disabledBreakpoint="true"] > .sourceLine::after {
     content: "";
     position: absolute;
-    left: 4px;
-    width: 13px;
-    height: 14px;
-    background: url(chrome://firebug/skin/exe.png) no-repeat;
+    top: 1px;
+    left: 7px;
+    width: 11px;
+    height: 12px;
+    background: url(chrome://firebug/skin/executionPointer.svg) no-repeat;
 }
 
 .sourceLine.editing {
