--- a/extension/skin/classic/mac/debugger.css
+++ b/extension/skin/classic/mac/debugger.css
@@ -109,14 +109,15 @@
 }
 
 .sourceRow[breakpoint="true"][condition="true"] > .sourceLine {
-    background-image: url(chrome://firebug/skin/breakpointCondition.png);
+    background-image: url(chrome://firebug/skin/breakpointCondition.svg), url(chrome://firebug/skin/breakpoint.svg);
+    background-position: 9px 3px, 5px 1px;
 }
 
-.sourceRow[breakpoint="true"][disabledBreakpoint="true"] > .sourceLine {
+.sourceRow[breakpoint="true"][disabledbreakpoint="true"] > .sourceLine {
     background-image: none;
 }
 
-.sourceRow[breakpoint="true"][disabledBreakpoint="true"] > .sourceLine::before {
+.sourceRow[breakpoint="true"][disabledBreakpoint="true"]:not([condition="true"]) > .sourceLine::before {
     content: "";
     position: absolute;
     top: 1px;
@@ -124,6 +125,17 @@
     width: 12px;
     height: 12px;
     background: url(chrome://firebug/skin/breakpoint.svg) no-repeat;
+    opacity: 0.5;
+}
+
+.sourceRow[breakpoint="true"][disabledBreakpoint="true"][condition="true"] > .sourceLine::before {
+    content: "";
+    position: absolute;
+    top: 1px;
+    left: 5px;
+    width: 12px;
+    height: 12px;
+    background: url(chrome://firebug/skin/breakpointCondition.svg) no-repeat 4px 2px, url(chrome://firebug/skin/breakpoint.svg) no-repeat;
     opacity: 0.5;
 }
 
