--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -319,33 +319,36 @@ textbox[type="fbSearchBox"] > panel {
 }
 
 #fbNavigateBackButton:hover,
-#fbNavigateBackButton:active,
 #fbNavigateForwardButton:hover,
-#fbNavigateForwardButton:active,
 .navigationHistoryMenuItemBack:hover,
+.navigationHistoryMenuItemForward:hover {
+    filter: url(chrome://firebug/skin/filters.svg#darken);
+}
+
+#fbNavigateBackButton:active,
+#fbNavigateForwardButton:active,
 .navigationHistoryMenuItemBack:active,
-.navigationHistoryMenuItemForward:hover,
 .navigationHistoryMenuItemForward:active {
-    -moz-image-region: rect(16px, 16px, 32px, 0);
+    filter: url(chrome://firebug/skin/filters.svg#deepDarken);
 }
 
 #fbNavigateBackButton[disabled="true"],
 #fbNavigateForwardButton[disabled="true"] {
-    -moz-image-region: rect(32px, 16px, 48px, 0);
+    filter: url(chrome://firebug/skin/filters.svg#brighten);
 }
 
 #fbNavigateBackButton:-moz-locale-dir(ltr),
 #fbNavigateForwardButton:-moz-locale-dir(rtl),
 .navigationHistoryMenuItemBack:-moz-locale-dir(ltr),
 .navigationHistoryMenuItemForward:-moz-locale-dir(rtl) {
-    list-style-image: url(chrome://firebug/skin/nav-back.png);
+    list-style-image: url(chrome://firebug/skin/navigationBack.svg);
 }
 
 #fbNavigateForwardButton:-moz-locale-dir(ltr),
 #fbNavigateBackButton:-moz-locale-dir(rtl),
 .navigationHistoryMenuItemForward:-moz-locale-dir(ltr),
 .navigationHistoryMenuItemBack:-moz-locale-dir(rtl) {
-    list-style-image: url(chrome://firebug/skin/nav-forward.png);
+    list-style-image: url(chrome://firebug/skin/navigationForward.svg);
 }
 
 .navigationHistoryMenuItemCurrent {
