Used American English wording instead of British English

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -285,7 +285,7 @@ textbox[type="fbSearchBox"] > panel {
 }
 
 #fbDebuggerButtons toolbarbutton[disabled="true"] {
-    filter: url(chrome://firebug/skin/filters.svg#greyscale);
+    filter: url(chrome://firebug/skin/filters.svg#grayscale);
 }
 
 #fbRerunButton {
