--- a/extension/content/firebug/firefox/browserOverlay.css
+++ b/extension/content/firebug/firefox/browserOverlay.css
@@ -12,7 +12,7 @@
 #firebug-button {
     -moz-binding: url("chrome://firebug/content/firefox/start-button/startButton.xml#start-button");
     list-style-image: url(chrome://firebug/skin/firebug16.png)!important;
-    filter: url(chrome://firebug/skin/filters.svg#greyscale);
+    filter: url(chrome://firebug/skin/filters.svg#grayscale);
 }
 
 #firebug-button[firebugActive="true"] {
