--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -179,7 +179,7 @@
 
 .cssProp.disabledStyle {
     background: transparent url(chrome://firebug/skin/disable.svg) no-repeat 2px 1px;
-    filter: url(chrome://firebug/skin/filters.svg#greyscale);
+    filter: url(chrome://firebug/skin/filters.svg#grayscale);
     color: #CCCCCC;
 }
 
