URLs for requests coming from cache must not be grayed out when they have a response error

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -438,7 +438,7 @@
     opacity: 0.5;
 }
 
-.netRow.fromCache .netHrefLabel {
+.netRow.fromCache:not(.responseError) .netHrefLabel {
     opacity: 1.0;
     color: gray;
 }
