--- a/extension/skin/classic/orion-firebug.css
+++ b/extension/skin/classic/orion-firebug.css
@@ -42,18 +42,41 @@
 /* Breakpoints */
 
 .annotation.breakpoint > DIV.annotationHTML {
-    background-image: url(chrome://firebug/skin/breakpoint.png);
-    background-position: top !important;
+    position: relative;
+    background-image: url(chrome://firebug/skin/breakpoint.svg);
 }
 
 .annotation.breakpoint.condition > DIV.annotationHTML {
-    background-image: url(chrome://firebug/skin/breakpointCondition.png);
-    background-position: top !important;
+    background-image: url(chrome://firebug/skin/breakpointCondition.svg), url(chrome://firebug/skin/breakpoint.svg);
 }
 
-.annotation.breakpoint.disabled > DIV.annotationHTML {
-    background-image: url(chrome://firebug/skin/breakpointDisabled.png);
-    background-position: top !important;
+.annotation.breakpoint.disabled:not(.debugLocation) > DIV.annotationHTML {
+    opacity: 0.5;
+}
+
+.annotation.debugLocation.breakpoint.disabled > DIV.annotationHTML {
+    background-image: none;
+}
+
+.annotation.debugLocation.breakpoint.disabled > DIV.annotationHTML::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    background: url(chrome://firebug/skin/breakpoint.svg) no-repeat center center;
+    opacity: 0.5;
+}
+
+.annotation.debugLocation.breakpoint.disabled > DIV.annotationHTML::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    background: url(chrome://firebug/skin/executionPointer.svg) no-repeat 70% center;
 }
 
 .annotationOverview.breakpoint.disabled {
@@ -62,7 +85,7 @@
 }
 
 .annotation.debugLocation > DIV.annotationHTML {
-    background-image: url(chrome://firebug/skin/exe.png);
+    background-image: url(chrome://firebug/skin/executionPointer.svg);
     color: #000000;
 }
 
@@ -71,22 +94,13 @@
     background-position: top !important;
 }
 
-/**
- * When the user right click on a line with no breakpoint and picks "Edit Breakpoint Condition"
- * The related annotation is marked as 'editing'. Use the style and display a breakpoint
- * icon indicating that the breakpoint will be auto-created if the user provides a condition.
- */
-.ruler.annotations > DIV.editing {
-    background-image: url(chrome://firebug/skin/breakpoint.png);
-    background-position: top !important;
-    background-repeat: no-repeat !important;
-}
-
 /*************************************************************************************************/
 /* The current debug location (execution line) */
 
 .annotation.breakpoint.debugLocation > DIV.annotationHTML {
-    background-image: url(chrome://firebug/skin/breakpointExe.png);
+    background-image: url(chrome://firebug/skin/executionPointer.svg), url(chrome://firebug/skin/breakpoint.svg);
+    background-position: 70% center, center center;
+    background-size: auto auto;
 }
 
 .annotationLine.debugLocation {
