Removed -moz prefix from border-radius where applicable

--- a/trace/FBTrace/chrome/skin/classic/traceConsole.css
+++ b/trace/FBTrace/chrome/skin/classic/traceConsole.css
@@ -59,7 +59,7 @@
 .traceInfoTab[selected="true"] {
     cursor: default !important;
     border-color: #D7D7D7;
-    -moz-border-radius: 4px 4px 0 0;
+    border-radius: 4px 4px 0 0;
     background-color: #FFFFFF;
 }
 
@@ -243,7 +243,7 @@
 .messageInfoTab[selected="true"] {
     cursor: default !important;
     border-color: #D7D7D7;
-    -moz-border-radius: 4px 4px 0 0;
+    border-radius: 4px 4px 0 0;
     background-color: #FFFFFF;
 }
 
