--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -15,6 +15,10 @@
     color: #000000;
 }
 
+.cssRulesListBox > .cssRule {
+    padding-left: 2em;
+}
+
 .cssRule:first-child {
     margin-top: 6px;
 }
