--- a/extension/skin/classic/html.css
+++ b/extension/skin/classic/html.css
@@ -22,7 +22,9 @@
     left: 0px;
     top: 0px;
     width: 14px;
-    height: 14px;
+    height: 1em;
+    padding: 4px 0;
+    background-position: center center!important;
 }
 
 .nodeChildBox {
